--- a/src/view/TestWindow.form
+++ b/src/view/TestWindow.form
@@ -4,9 +4,6 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="M&#xf3;dulo de Testes"/>
-    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[950, 520]"/>
-    </Property>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
@@ -31,10 +28,6 @@
           <Group type="102" alignment="1" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
-                      <Component id="jScrollPane2" min="-2" pref="300" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" max="-2" attributes="0">
                           <Group type="102" alignment="1" attributes="0">
@@ -53,7 +46,6 @@
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="inputRepeticoes" min="-2" pref="97" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="labelMensagem" max="32767" attributes="0"/>
                           <Component id="botaoRetornar" max="32767" attributes="0"/>
                       </Group>
                   </Group>
@@ -61,10 +53,21 @@
                       <EmptySpace min="-2" pref="110" max="-2" attributes="0"/>
                       <Component id="botaoLimparRotina" min="-2" pref="120" max="-2" attributes="0"/>
                   </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="labelMensagem" max="32767" attributes="0"/>
+                          <Component id="jScrollPane2" pref="300" max="32767" attributes="0"/>
+                      </Group>
+                  </Group>
               </Group>
               <EmptySpace pref="27" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="botaoLimparDados" min="-2" pref="130" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Component id="botaoLimparDados" min="-2" pref="130" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                      <Component id="botaoLimparDados1" min="-2" pref="130" max="-2" attributes="0"/>
+                  </Group>
                   <Component id="jScrollPane1" min="-2" pref="600" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -107,6 +110,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="botaoLimparDados" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
                   <Component id="botaoRetornar" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                  <Component id="botaoLimparDados1" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
           </Group>
@@ -247,6 +251,14 @@
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="botaoLimparDados1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Gerar Numeros"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoLimparDados1ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
