--- a/src/view/MainWindow.form
+++ b/src/view/MainWindow.form
@@ -72,7 +72,7 @@
               <Component id="labelSucesso" min="-2" pref="20" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="painelCorN" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
               <Component id="labelFalha" min="-2" pref="20" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -146,7 +146,7 @@
     </Component>
     <Component class="com.alee.laf.button.WebButton" name="botaoPassoAPasso">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Executar passo a passo"/>
+        <Property name="text" type="java.lang.String" value="Executar Passo a Passo"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoPassoAPassoActionPerformed"/>
@@ -175,12 +175,12 @@
                       <Component id="labelTempo" min="-2" max="-2" attributes="0"/>
                       <Component id="labelIte" alignment="0" min="-2" pref="132" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
+                  <EmptySpace pref="36" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="outputTempo" alignment="1" min="-2" pref="97" max="-2" attributes="0"/>
                       <Component id="outputIteracoes" alignment="1" min="-2" pref="97" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="0" pref="35" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -268,30 +268,30 @@
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
-                          <Component id="labelTamanho" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="24" max="32767" attributes="0"/>
+                      <Component id="labelTamanho" min="-2" max="-2" attributes="0"/>
+                      <Component id="labelCor" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace pref="32" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="3" pref="3" max="-2" attributes="0"/>
                           <Component id="inputTamanho" min="-2" pref="97" max="-2" attributes="0"/>
                       </Group>
-                      <Group type="102" attributes="0">
-                          <Component id="labelCor" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Component id="comboCor" min="-2" pref="100" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="comboCor" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace pref="12" max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="labelCor" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       <Component id="comboCor" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="32" pref="32" max="-2" attributes="0"/>
+                  <EmptySpace pref="33" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="labelTamanho" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="inputTamanho" alignment="3" min="-2" max="-2" attributes="0"/>
